[workspace]
resolver = "2"
members = ["ellipsis-client", "transaction-utils"]

[profile.release]
lto = "fat"
codegen-units = 1
overflow-checks = true

[workspace.dependencies]
anyhow = "1.0.95"
assert_matches = "1.5.0"
async-trait = "0.1.85"
backoff = { version = "0.4.0", features = ["tokio"] }
base64 = "0.22.1"
bincode = "1.3.3"
borsh = "0.10.4"
bs58 = "0.5.1"
chrono-humanize = "0.2.3"
crossbeam-channel = "0.5.14"
futures = "0.3.31"
itertools = "0.14.0"
lazy_static = "1.5.0"
log = "0.4.22"
serde = "1.0.217"
solana-banks-client = "~2.1.1"
solana-bpf-loader-program = "~2.1.1"
solana-client = "~2.1.1"
solana-logger = "~2.1.1"
solana-program = "~2.1.1"
solana-program-runtime = "~2.1.1"
solana-runtime = "~2.1.1"
solana-sdk = "~2.1.1"
solana-send-transaction-service = "~2.1.1"
solana-transaction-status = "~2.1.1"
solana-vote-program = "~2.1.1"
tarpc = { version = "0.35.0", features = ["full"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros"] }
tokio-serde = { version = "0.9.0", features = ["bincode"] }
tracing = { version = "0.1.41", features = ["log"] }
yellowstone-grpc-client = "5.0.0"
yellowstone-grpc-proto = "5.0.0"
